Fixed bug with generics and added custom collection implementation support